--- a/package.xml
+++ b/package.xml
@@ -1042,6 +1042,7 @@
         <members>Test_Object_Demo__c.Salary_Fld__c</members>
         <members>Test_Object_Feb_26__c.Test_Field__c</members>
         <members>Test_Object_Mar24__c.Test_Object_Demo_Mar_23__c</members>
+        <members>Test_Object_Mar26__c.Checcee__c</members>
         <members>Test_Object_Mar_4__c.New_Test__c</members>
         <members>Test_VCS_Obj__c.Test_Field__c</members>
         <members>User.ManagerId</members>
