--- a/package.xml
+++ b/package.xml
@@ -244,6 +244,7 @@
         <members>AssetRelationship.RelatedAssetId</members>
         <members>AssetRelationship.RelationshipType</members>
         <members>AssetRelationship.ToDate</members>
+        <members>Aug19_Demo_Object__c.New_Test_Field__c</members>
         <members>AuthorizationForm.DefaultAuthFormTextId</members>
         <members>AuthorizationForm.EffectiveFromDate</members>
         <members>AuthorizationForm.EffectiveToDate</members>
@@ -1067,6 +1068,7 @@
         <members>Asset</members>
         <members>AssetRelationship</members>
         <members>AssistantProgress</members>
+        <members>Aug19_Demo_Object__c</members>
         <members>AuthorizationForm</members>
         <members>AuthorizationFormConsent</members>
         <members>AuthorizationFormDataUse</members>
@@ -1157,6 +1159,7 @@
         <members>Property__c</members>
         <members>QuickText</members>
         <members>QuickTextUsage</members>
+        <members>QuickTst__c</members>
         <members>Recommendation</members>
         <members>RecordAction</members>
         <members>RecordMergeHistory</members>
@@ -1243,6 +1246,7 @@
         <name>CustomObjectTranslation</name>
     </types>
     <types>
+        <members>Aug19_Demo_Object__c</members>
         <members>Bot_Command__c</members>
         <members>Broker__c</members>
         <members>Command_Center</members>
@@ -1356,6 +1360,7 @@
         <members>Account-Account Layout</members>
         <members>Asset-Asset Layout</members>
         <members>AssetRelationship-Asset Relationship Layout</members>
+        <members>Aug19_Demo_Object__c-Aug19 Demo Object Layout</members>
         <members>Bot_Command__c-Bot Action Layout</members>
         <members>Broker__c-Broker Layout</members>
         <members>Campaign-Campaign Layout</members>
@@ -1420,6 +1425,7 @@
         <members>ProductConsumptionSchedule-Product Consumption Schedule Layout</members>
         <members>Property__c-Property Layout</members>
         <members>QuickText-Quick Text Layout</members>
+        <members>QuickTst__c-QuickTst Layout</members>
         <members>Scorecard-Scorecard Layout</members>
         <members>ScorecardAssociation-Scorecard Association Layout</members>
         <members>ScorecardMetric-Scorecard Metric Layout</members>
@@ -1464,6 +1470,7 @@
         <members>Activity.TodaysTasks</members>
         <members>Activity.UpcomingEvents</members>
         <members>Asset.AllAssets</members>
+        <members>Aug19_Demo_Object__c.All</members>
         <members>AuthorizationForm.All_AuthorizationForms</members>
         <members>AuthorizationFormConsent.All_AuthorizationFormConsents</members>
         <members>AuthorizationFormDataUse.All_AuthorizationFormDataUses</members>
@@ -1579,6 +1586,7 @@
         <name>ManagedContentType</name>
     </types>
     <types>
+        <members>ABC Dummy</members>
         <members>Admin</members>
         <members>Analytics Cloud Integration User</members>
         <members>Analytics Cloud Security User</members>
@@ -1603,8 +1611,10 @@
         <members>Gold Partner User</members>
         <members>High Volume Customer Portal User</members>
         <members>HighVolumePortal</members>
+        <members>Hong_Clone</members>
         <members>Identity User</members>
         <members>MarketingProfile</members>
+        <members>Minimum Access - Salesforce</members>
         <members>Partner App Subscription User</members>
         <members>Partner Community Login User</members>
         <members>Partner Community User</members>
