--- a/package.xml
+++ b/package.xml
@@ -732,6 +732,7 @@
         <members>Individual.SendIndividualData</members>
         <members>Individual.ShouldForget</members>
         <members>Individual.Website</members>
+        <members>LLC_BI__Loan__c.TestAutoRabitCurrency__c</members>
         <members>Lead.Address</members>
         <members>Lead.AnnualRevenue</members>
         <members>Lead.CampaignId</members>
@@ -765,6 +766,7 @@
         <members>Lead.Title</members>
         <members>Lead.Website</members>
         <members>LeadCleanInfo.Industry</members>
+        <members>LoanApplicant.TestAutoRabitString__c</members>
         <members>Macro.Description</members>
         <members>Macro.IsAlohaSupported</members>
         <members>Macro.IsLightningSupported</members>
@@ -1400,6 +1402,7 @@
         <members>Lead-Lead %28Sales%29 Layout</members>
         <members>Lead-Lead %28Support%29 Layout</members>
         <members>Lead-Lead Layout</members>
+        <members>LoanApplicant-Loan Applicant Layout</members>
         <members>Macro-Macro Layout</members>
         <members>Mar5objectTest__c-Mar5objectTest Layout</members>
         <members>Mar_16_Test_Change__c-Mar 16 Test Change Layout</members>
@@ -1594,6 +1597,7 @@
         <members>Chatter External User</members>
         <members>Chatter Free User</members>
         <members>Chatter Moderator User</members>
+        <members>Company Communities User</members>
         <members>ContractManager</members>
         <members>Cross Org Data Proxy User</members>
         <members>Custom%3A Marketing Profile</members>
@@ -1625,6 +1629,10 @@
         <members>Standard</members>
         <members>StandardAul</members>
         <members>Work%2Ecom Only User</members>
+        <members>nCino - Lite Seat Profile</members>
+        <members>nCino - Premium CRM Profile</members>
+        <members>nCino - Standard Platform Data View Profile</members>
+        <members>nCino - Standard Platform Profile</members>
         <name>Profile</name>
     </types>
     <types>
